Adding google verification code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+    <meta name="google-site-verification" content="29xtiNvq7Wt-9B279LpMZzHUPLHfMLb3A7Jw3hSaL4M" />
     <title>Muitas Variáveis</title>
 </head>
 <body>
