Adicionando gif do Bruce Lee na página de erro

--- a/error.html
+++ b/error.html
@@ -23,7 +23,7 @@ body{ font-family: 'Press Start 2P', cursive; font-family: 'VT323', monospace; t
     }
 
     #not-found {
-        background-image: url(https://im2.ezgif.com/tmp/ezgif-2-21d1b43caf.gif);
+        background-image: url(bruce-lee.gif);
         background-size: cover;
         background-position: center;
         color: white;
